--- a/index.ipynb
+++ b/index.ipynb
@@ -88,11 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"Change Things\"'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "flatiron_mantra = None\n",
+    "flatiron_mantra =(\"\\\"Change Things\\\"\")\n",
     "flatiron_mantra"
    ]
   },
@@ -101,6 +112,31 @@
    "metadata": {},
    "source": [
     "Add a new markdown cell below this one and type `### This is a new header`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This is a new hearder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to Data_science class\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"welcome to Data_science class\")"
    ]
   },
   {
@@ -128,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -143,6 +179,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "dc07d24e2f18896857f0b2a651fe84ba40ce7b297e58d8804a308c8039f752a6"
+   }
   }
  },
  "nbformat": 4,
